{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 230,
  "lineage": "420a1397-f69d-c538-deb2-b04ee60501ab",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-privada1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e001c9271cf7f3b9",
            "arn": "arn:aws:ec2:us-east-1:142851881777:instance/i-07f6dfc181e5fce33",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-01b609e3f17fa6aa6",
                "volume_size": 30,
                "volume_type": "standard"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07f6dfc181e5fce33",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "id_rsa",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a8f7247c06d16a10",
            "private_dns": "ip-10-0-0-220.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.220",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-01b609e3f17fa6aa6",
                "volume_size": 30,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08b706af5c739c4fa",
            "tags": {
              "Name": "ec2-privada1-terraform"
            },
            "tags_all": {
              "Name": "ec2-privada1-terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04adc710bdc67aec6"
            ]
          },
          "dependencies": [
            "module.ec2.aws_key_pair.generated_key",
            "module.ec2.module.net.aws_security_group.sg",
            "module.ec2.module.net.aws_subnet.private_subnet",
            "module.ec2.module.net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-privada2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e001c9271cf7f3b9",
            "arn": "arn:aws:ec2:us-east-1:142851881777:instance/i-031b46f52eb57a585",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-059fd4b0f8ba3f131",
                "volume_size": 30,
                "volume_type": "standard"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-031b46f52eb57a585",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "id_rsa",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06a38946a37a618c0",
            "private_dns": "ip-10-0-0-198.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.198",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-059fd4b0f8ba3f131",
                "volume_size": 30,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08b706af5c739c4fa",
            "tags": {
              "Name": "ec2-privada2-terraform"
            },
            "tags_all": {
              "Name": "ec2-privada2-terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04adc710bdc67aec6"
            ]
          },
          "dependencies": [
            "module.ec2.aws_key_pair.generated_key",
            "module.ec2.module.net.aws_security_group.sg",
            "module.ec2.module.net.aws_subnet.private_subnet",
            "module.ec2.module.net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-publica",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e001c9271cf7f3b9",
            "arn": "arn:aws:ec2:us-east-1:142851881777:instance/i-0ca8412959370fa97",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-05ce26610bd550854",
                "volume_size": 30,
                "volume_type": "standard"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ca8412959370fa97",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "id_rsa",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0cee5270258ea2718",
            "private_dns": "ip-10-0-0-36.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.36",
            "public_dns": "ec2-52-91-175-180.compute-1.amazonaws.com",
            "public_ip": "52.91.175.180",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-05ce26610bd550854",
                "volume_size": 30,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07618d57dddac1037",
            "tags": {
              "Name": "ec2-publica-terraform"
            },
            "tags_all": {
              "Name": "ec2-publica-terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04adc710bdc67aec6"
            ]
          },
          "dependencies": [
            "module.ec2.aws_key_pair.generated_key",
            "module.ec2.module.net.aws_security_group.sg",
            "module.ec2.module.net.aws_subnet.public_subnet",
            "module.ec2.module.net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2.module.net",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-gateway-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05f0ad0ce6c70bdbe",
            "association_id": "eipassoc-027f7f46a032352df",
            "domain": "vpc",
            "id": "eipalloc-05f0ad0ce6c70bdbe",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0d7c1c77e06c1dd42",
            "private_dns": "ip-10-0-0-69.ec2.internal",
            "private_ip": "10.0.0.69",
            "public_dns": "ec2-3-229-77-200.compute-1.amazonaws.com",
            "public_ip": "3.229.77.200",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "terraform-nat-ip-elastico"
            },
            "tags_all": {
              "Name": "terraform-nat-ip-elastico"
            },
            "vpc": true
          },
          "dependencies": [
            "module.ec2.module.net.aws_internet_gateway.igw",
            "module.ec2.module.net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2.module.net",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:142851881777:internet-gateway/igw-026aaac4e10340ea4",
            "id": "igw-026aaac4e10340ea4",
            "owner_id": "142851881777",
            "tags": {
              "Name": "igw-terraform"
            },
            "tags_all": {
              "Name": "igw-terraform"
            },
            "vpc_id": "vpc-00c642e4505026924"
          },
          "dependencies": [
            "module.ec2.module.net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2.module.net",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05f0ad0ce6c70bdbe",
            "association_id": "eipassoc-027f7f46a032352df",
            "connectivity_type": "public",
            "id": "nat-02f7b206720409cf7",
            "network_interface_id": "eni-0d7c1c77e06c1dd42",
            "private_ip": "10.0.0.69",
            "public_ip": "3.229.77.200",
            "subnet_id": "subnet-07618d57dddac1037",
            "tags": {
              "Name": "terraform-nat"
            },
            "tags_all": {
              "Name": "terraform-nat"
            }
          },
          "dependencies": [
            "module.ec2.module.net.aws_eip.nat-gateway-eip",
            "module.ec2.module.net.aws_internet_gateway.igw",
            "module.ec2.module.net.aws_subnet.public_subnet",
            "module.ec2.module.net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2.module.net",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "acl_privada",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:142851881777:network-acl/acl-033e0dd8addb93f96",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-033e0dd8addb93f96",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 32000,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 300,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 3306,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 400,
                "to_port": 3306
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/24",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/24",
                "from_port": 3306,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 350,
                "to_port": 3306
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/24",
                "from_port": 8080,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 200,
                "to_port": 8080
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/24",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 250,
                "to_port": 80
              }
            ],
            "owner_id": "142851881777",
            "subnet_ids": [
              "subnet-08b706af5c739c4fa"
            ],
            "tags": {
              "Name": "acl_privada_terraform"
            },
            "tags_all": {
              "Name": "acl_privada_terraform"
            },
            "vpc_id": "vpc-00c642e4505026924"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.module.net.aws_subnet.private_subnet",
            "module.ec2.module.net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2.module.net",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "acl_publica",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:142851881777:network-acl/acl-048475cee6af6336d",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-048475cee6af6336d",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 3000,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 500,
                "to_port": 3000
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 3001,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 450,
                "to_port": 3001
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 32000,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 400,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 300,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 8080,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 250,
                "to_port": 8080
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 200,
                "to_port": 80
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/24",
                "from_port": 3306,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 350,
                "to_port": 3306
              }
            ],
            "owner_id": "142851881777",
            "subnet_ids": [
              "subnet-07618d57dddac1037"
            ],
            "tags": {
              "Name": "acl_publica_terraform"
            },
            "tags_all": {
              "Name": "acl_publica_terraform"
            },
            "vpc_id": "vpc-00c642e4505026924"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.module.net.aws_subnet.public_subnet",
            "module.ec2.module.net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2.module.net",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:142851881777:route-table/rtb-060ab51f3bccb3f5a",
            "id": "rtb-060ab51f3bccb3f5a",
            "owner_id": "142851881777",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02f7b206720409cf7",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-private-terraform"
            },
            "tags_all": {
              "Name": "rt-private-terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-00c642e4505026924"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.module.net.aws_eip.nat-gateway-eip",
            "module.ec2.module.net.aws_internet_gateway.igw",
            "module.ec2.module.net.aws_nat_gateway.nat",
            "module.ec2.module.net.aws_subnet.public_subnet",
            "module.ec2.module.net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2.module.net",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:142851881777:route-table/rtb-03794681968a223a4",
            "id": "rtb-03794681968a223a4",
            "owner_id": "142851881777",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-026aaac4e10340ea4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-public-terraform"
            },
            "tags_all": {
              "Name": "rt-public-terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-00c642e4505026924"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.module.net.aws_internet_gateway.igw",
            "module.ec2.module.net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2.module.net",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0030aeae7d2cf33bf",
            "route_table_id": "rtb-060ab51f3bccb3f5a",
            "subnet_id": "subnet-08b706af5c739c4fa"
          },
          "dependencies": [
            "module.ec2.module.net.aws_eip.nat-gateway-eip",
            "module.ec2.module.net.aws_internet_gateway.igw",
            "module.ec2.module.net.aws_nat_gateway.nat",
            "module.ec2.module.net.aws_route_table.private_rt",
            "module.ec2.module.net.aws_subnet.private_subnet",
            "module.ec2.module.net.aws_subnet.public_subnet",
            "module.ec2.module.net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2.module.net",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f793b851aea83443",
            "route_table_id": "rtb-03794681968a223a4",
            "subnet_id": "subnet-07618d57dddac1037"
          },
          "dependencies": [
            "module.ec2.module.net.aws_internet_gateway.igw",
            "module.ec2.module.net.aws_route_table.public_rt",
            "module.ec2.module.net.aws_subnet.public_subnet",
            "module.ec2.module.net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2.module.net",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:142851881777:security-group/sg-04adc710bdc67aec6",
            "description": "Allow SSH/HTTP/HTTPS and Docker",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04adc710bdc67aec6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3001
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "basic_security",
            "name_prefix": "",
            "owner_id": "142851881777",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00c642e4505026924"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.module.net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2.module.net",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:142851881777:subnet/subnet-08b706af5c739c4fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.128/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08b706af5c739c4fa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "142851881777",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sub-rede-privada-terraform"
            },
            "tags_all": {
              "Name": "sub-rede-privada-terraform"
            },
            "vpc_id": "vpc-00c642e4505026924"
          },
          "dependencies": [
            "module.ec2.module.net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2.module.net",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:142851881777:subnet/subnet-07618d57dddac1037",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07618d57dddac1037",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "142851881777",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sub-rede-publica-terraform"
            },
            "tags_all": {
              "Name": "sub-rede-publica-terraform"
            },
            "vpc_id": "vpc-00c642e4505026924"
          },
          "dependencies": [
            "module.ec2.module.net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2.module.net",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:142851881777:vpc/vpc-00c642e4505026924",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-0b3325125eb689756",
            "default_route_table_id": "rtb-0526857942bf705dc",
            "default_security_group_id": "sg-007328e65c540b37f",
            "dhcp_options_id": "dopt-09996ad13251fe20b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00c642e4505026924",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0526857942bf705dc",
            "owner_id": "142851881777",
            "tags": {
              "Name": "vpc-terraform"
            },
            "tags_all": {
              "Name": "vpc-terraform"
            }
          }
        }
      ]
    },
    {
      "module": "module.net",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-gateway-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01c907958a77ec703",
            "association_id": "eipassoc-0374c3cfcb6c6a5a6",
            "domain": "vpc",
            "id": "eipalloc-01c907958a77ec703",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0e273ab11e5c8c423",
            "private_dns": "ip-10-0-0-114.ec2.internal",
            "private_ip": "10.0.0.114",
            "public_dns": "ec2-18-211-41-158.compute-1.amazonaws.com",
            "public_ip": "18.211.41.158",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "terraform-nat-ip-elastico"
            },
            "tags_all": {
              "Name": "terraform-nat-ip-elastico"
            },
            "vpc": true
          },
          "dependencies": [
            "module.net.aws_internet_gateway.igw",
            "module.net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.net",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:142851881777:internet-gateway/igw-00553f3d4e4771192",
            "id": "igw-00553f3d4e4771192",
            "owner_id": "142851881777",
            "tags": {
              "Name": "igw-terraform"
            },
            "tags_all": {
              "Name": "igw-terraform"
            },
            "vpc_id": "vpc-0bb87b5e458ed5496"
          },
          "dependencies": [
            "module.net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.net",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01c907958a77ec703",
            "association_id": "eipassoc-0374c3cfcb6c6a5a6",
            "connectivity_type": "public",
            "id": "nat-0c910bfd128be9014",
            "network_interface_id": "eni-0e273ab11e5c8c423",
            "private_ip": "10.0.0.114",
            "public_ip": "18.211.41.158",
            "subnet_id": "subnet-0d745fa6a71cfd1a0",
            "tags": {
              "Name": "terraform-nat"
            },
            "tags_all": {
              "Name": "terraform-nat"
            }
          },
          "dependencies": [
            "module.net.aws_eip.nat-gateway-eip",
            "module.net.aws_internet_gateway.igw",
            "module.net.aws_subnet.public_subnet",
            "module.net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.net",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "acl_privada",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:142851881777:network-acl/acl-078b7c400d54f31ff",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-078b7c400d54f31ff",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 32000,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 300,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 3306,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 400,
                "to_port": 3306
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/24",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/24",
                "from_port": 3306,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 350,
                "to_port": 3306
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/24",
                "from_port": 8080,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 200,
                "to_port": 8080
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/24",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 250,
                "to_port": 80
              }
            ],
            "owner_id": "142851881777",
            "subnet_ids": [
              "subnet-07d4f14987f3e7cca"
            ],
            "tags": {
              "Name": "acl_privada_terraform"
            },
            "tags_all": {
              "Name": "acl_privada_terraform"
            },
            "vpc_id": "vpc-0bb87b5e458ed5496"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.net.aws_subnet.private_subnet",
            "module.net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.net",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "acl_publica",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:142851881777:network-acl/acl-0b2065e8923e0d872",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0b2065e8923e0d872",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 3000,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 500,
                "to_port": 3000
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 3001,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 450,
                "to_port": 3001
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 32000,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 400,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 300,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 8080,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 250,
                "to_port": 8080
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 200,
                "to_port": 80
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/24",
                "from_port": 3306,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 350,
                "to_port": 3306
              }
            ],
            "owner_id": "142851881777",
            "subnet_ids": [
              "subnet-0d745fa6a71cfd1a0"
            ],
            "tags": {
              "Name": "acl_publica_terraform"
            },
            "tags_all": {
              "Name": "acl_publica_terraform"
            },
            "vpc_id": "vpc-0bb87b5e458ed5496"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.net.aws_subnet.public_subnet",
            "module.net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.net",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:142851881777:route-table/rtb-0139b48f4d5fce2f5",
            "id": "rtb-0139b48f4d5fce2f5",
            "owner_id": "142851881777",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c910bfd128be9014",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-private-terraform"
            },
            "tags_all": {
              "Name": "rt-private-terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bb87b5e458ed5496"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.net.aws_eip.nat-gateway-eip",
            "module.net.aws_internet_gateway.igw",
            "module.net.aws_nat_gateway.nat",
            "module.net.aws_subnet.public_subnet",
            "module.net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.net",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:142851881777:route-table/rtb-0f4d4236fafdde094",
            "id": "rtb-0f4d4236fafdde094",
            "owner_id": "142851881777",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00553f3d4e4771192",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-public-terraform"
            },
            "tags_all": {
              "Name": "rt-public-terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bb87b5e458ed5496"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.net.aws_internet_gateway.igw",
            "module.net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.net",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c1c0004a7112471c",
            "route_table_id": "rtb-0139b48f4d5fce2f5",
            "subnet_id": "subnet-07d4f14987f3e7cca"
          },
          "dependencies": [
            "module.net.aws_eip.nat-gateway-eip",
            "module.net.aws_internet_gateway.igw",
            "module.net.aws_nat_gateway.nat",
            "module.net.aws_route_table.private_rt",
            "module.net.aws_subnet.private_subnet",
            "module.net.aws_subnet.public_subnet",
            "module.net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.net",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e61ebca8328a84dc",
            "route_table_id": "rtb-0f4d4236fafdde094",
            "subnet_id": "subnet-0d745fa6a71cfd1a0"
          },
          "dependencies": [
            "module.net.aws_internet_gateway.igw",
            "module.net.aws_route_table.public_rt",
            "module.net.aws_subnet.public_subnet",
            "module.net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.net",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:142851881777:security-group/sg-05356f7066471bf33",
            "description": "Allow SSH/HTTP/HTTPS and Docker",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05356f7066471bf33",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3001
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "basic_security",
            "name_prefix": "",
            "owner_id": "142851881777",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0bb87b5e458ed5496"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.net",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:142851881777:subnet/subnet-07d4f14987f3e7cca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.128/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07d4f14987f3e7cca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "142851881777",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sub-rede-privada-terraform"
            },
            "tags_all": {
              "Name": "sub-rede-privada-terraform"
            },
            "vpc_id": "vpc-0bb87b5e458ed5496"
          },
          "dependencies": [
            "module.net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.net",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:142851881777:subnet/subnet-0d745fa6a71cfd1a0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d745fa6a71cfd1a0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "142851881777",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sub-rede-publica-terraform"
            },
            "tags_all": {
              "Name": "sub-rede-publica-terraform"
            },
            "vpc_id": "vpc-0bb87b5e458ed5496"
          },
          "dependencies": [
            "module.net.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.net",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:142851881777:vpc/vpc-0bb87b5e458ed5496",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-05ef3516a0d496b9e",
            "default_route_table_id": "rtb-09f736c7f699db2ff",
            "default_security_group_id": "sg-0684a0013faadc570",
            "dhcp_options_id": "dopt-09996ad13251fe20b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bb87b5e458ed5496",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09f736c7f699db2ff",
            "owner_id": "142851881777",
            "tags": {
              "Name": "vpc-terraform"
            },
            "tags_all": {
              "Name": "vpc-terraform"
            }
          }
        }
      ]
    }
  ]
}